updated folder structure and clickController.js

--- a/public/whodat.html
+++ b/public/whodat.html
@@ -16,12 +16,12 @@
 
 			<br />
 			<p >whodat</p>
-			<button class="btn btn-clickMe1" onclick="myFunction1()">click me</button>
-			<p id="demo"></p>
+			<button class="btn btn-clickMe1" id="clickMe1">click me</button>
+			<p id="demo1"></p>
 		</div>
 
-<script src="/clientClickControllers/clickController.client.js"></script>
+	<script type="text/javascript" src="controllers/clickController.js"></script>
 	</body>
-	<!-- // -->
+	
 
 </html>
