--- a/public/hi.html
+++ b/public/hi.html
@@ -16,17 +16,13 @@
 
 			<br />
 			<p >whodat</p>
-		<button class="btn btn-clickMe" onclick="myFunction()">click me</button> 
+		<button class="btn btn-clickMe" id="btn-clickMe">click me</button> 
 		<p id="demo"></p>
 		</div>
 		
 		
 		
-	<script>
-function myFunction() {
-    document.getElementById("demo").innerHTML = "Hello World";
-}
-</script>
+	<script type="text/javascript" src="controllers/clickController.js"></script>
 
 	</body>
 
