--- a/public/hi.html
+++ b/public/hi.html
@@ -15,7 +15,7 @@
 		<div class="container">
 
 			<br />
-			<p >whodat</p>
+			<p >who?</p>
 		<button class="btn btn-clickMe" id="btn-clickMe">click me</button> 
 		<p id="demo"></p>
 		</div>
