changes to index.js

--- a/public/hi.html
+++ b/public/hi.html
@@ -16,13 +16,15 @@
 
 			<br />
 			<p >who?</p>
-		<button class="btn btn-clickMe" id="btn-clickMe">click me</button> 
+		<button class="btn btn-clickMe" id="btn-clickMe">Who?</button> 
 		<p id="demo"></p>
+		
+		<button class="btn btn-goToWho" id="btn-goToWho">Who</button> 
 		</div>
 		
 		
 		
-	<script type="text/javascript" src="controllers/clickController.js"></script>
+	<script type="text/javascript" src="controllers/hiController.js"></script>
 
 	</body>
 
