--- a/public/who.html
+++ b/public/who.html
@@ -18,9 +18,13 @@
 			<p >whodat</p>
 			<button class="btn btn-clickMe1" id="clickMe1">click me</button>
 			<p id="demo1"></p>
+			<br />
+			<p id="demo2">Send some data to the mongo database</p>
+			<button class="btn btn-send1" id="send1">Send Data</button>
 		</div>
 
 	<script type="text/javascript" src="controllers/whoController.js"></script>
+	<script type="text/javascript" src="controllers/clickController.client.js"></script>
 	</body>
 	
 
